# brainwares

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/skills/create-patchnotes/: SKILL.md
.brainwares/: config.json
.brainwares/memories/: another-memory.md  getting-started.md  index.md  src.md
.brainwares/programs/: refactor.md
.brainwares/ui/: package.json  vite.config.js
.brainwares/ui/src/: App.jsx
.github/workflows/: create-release.yml  release.yml
src/: cli.rs  commands.rs  engine.rs  hash.rs  main.rs  models.rs  parser.rs  vault.rs
